--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@ body {
     background-color: aqua;
     color: black;
 }
+
+
+
+.banner {
+    background-color: aqua;
+    display: flex;
+    height: 500px;
+    text-align: center;
+    align-items: center;
+    
+}
